# RealTimeChat

./: .env.template  .gitignore  LICENSE  README.md  TODO.md  docker-compose.base.yaml  docker-compose.extended.yaml  docker-compose.yaml  krakend.json  loki-config.yml  nginx.conf  nginx.conf.template  prometheus.yml  promtail-config.yml
Chat-service/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  TODO.md  alembic.ini  docker-compose.yaml  index.html  pyproject.toml  railway.toml  requirements.txt
Chat-service/application/configs/: settings.py
Chat-service/application/di/: containers.py
Chat-service/application/exceptions/: __init__.py  base.py  exceptions.py
Chat-service/application/repositories/: chat_messages_repo.py  chat_rooms_repo.py
Chat-service/application/services/: websocket_service.py
Chat-service/application/utils/: logging.py  middlewares.py
Chat-service/application/web/: __main__.py  app.py
Chat-service/template/: index.html
Media-service/: .env.template  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
Media-service/.github/workflows/: CI.yml
Media-service/application/configs/: settings.py
Media-service/application/di/: container.py
Media-service/application/exceptions/: exceptions.py
Media-service/application/file_process_worker/: __main__.py  health.py  worker.py
Media-service/application/outbox_consumer_worker/: __main__.py  health.py  worker.py
Media-service/application/outbox_producer_worker/: __main__.py  health.py  (+1 more)
Media-service/docs/: for_integrations.txt
Users-service/: .dockerignore  .env.template  alembic.ini  docker-compose.yaml  dockerfile  main.py  pyproject.toml  railway.toml  requirements.txt
Users-service/alembic/: env.py
Users-service/api/: __init__.py  auth_deps.py  authentication.py
Users-service/core/: settings.py
Users-service/docs/: for_integrations.md
Users-service/exceptions/: base.py  exceptions.py
Users-service/scripts/: gen_keys.py
Users-service/services/: auth_service.py  roles.py
Users-service/template/: index.html
Users-service/utils/: errors_handlers.py  gen_keys.py  logging.py  middlewares.py  security.py  time_decorator.py
(+161 files in other folders)
