[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
fastapi = {extras = ["standart"], version = "^0.135.1"}
uvicorn = "^0.41.0"
websockets = "^16.0"
sqlalchemy = "^2.0.48"
asyncpg = "^0.31.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.12.0"
loguru = "^0.7.3"
alembic = "^1.18.3"
dishka = "^1.8.0"
orjson = "^3.11.7"
redis = "^7.3.0"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)"
]
